Перешли с fortify на свою авторизацию
